--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activities.CustomizationActivity"></activity>
+        <activity android:name=".Activities.RollActivity"></activity>
+        <activity android:name=".Activities.CustomizationActivity" />
         <activity android:name=".Activities.RecommendationActivity" />
         <activity android:name=".Activities.RouletteActivity" />
         <activity android:name=".Activities.RegisterActivity" />
