--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,7 @@
         <activity android:name=".Activities.RouletteActivity" />
         <activity android:name=".Activities.RegisterActivity" />
         <activity android:name=".Activities.MainActivity" />
+        <activity android:name=".Activities.RecommendationActivity" />
         <activity android:name=".Activities.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
