--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,13 +70,13 @@ dependencies {
     // Firestore
     implementation 'com.google.firebase:firebase-firestore:21.4.0'
 
-
-
     // Other Firebase/Play services deps
-    implementation 'com.google.firebase:firebase-auth:19.2.0'
-    implementation 'com.google.android.gms:play-services-auth:17.0.0'
+    implementation 'com.google.firebase:firebase-auth:19.3.0'
+    implementation 'com.google.android.gms:play-services-auth:18.0.0'
     // FirebaseUI (for authentication)
     implementation 'com.firebaseui:firebase-ui-auth:6.2.0'
 
+
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
 }
