--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
             android:label="@string/title_activity_maps" />
         <activity android:name=".Activities.CustomizationActivity" />
         <activity android:name=".Activities.RouletteActivity" />
+        <activity android:name=".Activities.RollActivity"/>
         <activity android:name=".Activities.RecommendationActivity" />
         <activity android:name=".Activities.MainActivity">
             <intent-filter>
