--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.firebase:firebase-messaging:17.3.4'
@@ -69,6 +69,10 @@ dependencies {
     // Firebase ...
     // Firestore
     implementation 'com.google.firebase:firebase-firestore:21.4.0'
+    //firebasehttps://medium.com/mindorks/scheduling-fcm-push-notifications-on-device-android-2d3bb9653b4d
+    implementation 'com.google.firebase:firebase-core:17.2.1'
+    implementation 'com.google.firebase:firebase-iid:20.0.2'
+    implementation 'com.google.firebase:firebase-messaging:20.1.0'
 
     // Other Firebase/Play services deps
     implementation 'com.google.firebase:firebase-auth:19.3.0'
