update_danny_fin
12

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,7 @@
             </intent-filter>
         </activity>
         <receiver android:name="MyAlarmReceiver"
+            android:enabled="true"
             >
         </receiver>
 
